[package]
name = "eskom-calendar-api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
csv = "1.1"
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
shuttle-rocket = { version = "0.17.0" }
shuttle-runtime = { version = "0.17.0" }
shuttle-shared-db = { version = "0.17.0", features = ["postgres"] }
shuttle-aws-rds = { version = "0.17.0", features = ["postgres"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.28.0", features = ["full"] }
regex = "1.8.3"
